--- a/package.json
+++ b/package.json
@@ -2,6 +2,9 @@
   "name": "vinci-airdrop",
   "private": true,
   "sideEffects": false,
+  "scripts": {
+    "build": "node scripts/app.js"
+  },
   "dependencies": {
     "ethers": "^5.6.6",
     "keccak256": "^1.0.6",
